<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:layout_marginBottom="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Country"
        android:maxWidth="250dp"
        app:layout_constraintTop_toTopOf="@id/countryFlag"
        app:layout_constraintStart_toEndOf="@id/countryFlag"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/capitalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/countryFlag"
        app:layout_constraintStart_toStartOf="@id/countryName"
        app:layout_constraintTop_toBottomOf="@id/countryName" />

    <TextView
        android:id="@+id/countryCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/countryFlag"
        app:layout_constraintStart_toEndOf="@id/capitalText"
        app:layout_constraintTop_toBottomOf="@id/countryName"
        tools:text="Capital" />

    <TextView
        android:id="@+id/regionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/region"
        app:layout_constraintTop_toBottomOf="@+id/countryFlag"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/countryRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/countryFlag"
        app:layout_constraintStart_toEndOf="@id/regionText"
        tools:text="Asia"/>

    <TextView
        android:id="@+id/subregionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subregion"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/regionText"
        app:layout_constraintStart_toStartOf="@id/regionText"/>

    <TextView
        android:id="@+id/countrySubregion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Subregion"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/countryRegion"
        app:layout_constraintStart_toEndOf="@id/subregionText"/>

    <TextView
        android:id="@+id/populationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/subregionText"
        app:layout_constraintStart_toStartOf="@id/subregionText"/>

    <TextView
        android:id="@+id/countryPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12345"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/subregionText"
        app:layout_constraintStart_toEndOf="@id/populationText"/>

    <TextView
        android:id="@+id/languageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/populationText"
        app:layout_constraintStart_toStartOf="@id/populationText"/>

    <TextView
        android:id="@+id/countryLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Arabic"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/countryPopulation"
        app:layout_constraintStart_toEndOf="@id/languageText"/>

    <TextView
        android:id="@+id/borderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borders"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/languageText"
        app:layout_constraintStart_toStartOf="@id/languageText"/>

    <TextView
        android:id="@+id/countryBorders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="China, India"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/countryLanguage"
        app:layout_constraintStart_toEndOf="@id/borderText"/>

</androidx.constraintlayout.widget.ConstraintLayout>